--- a/roles/pgbouncer_exporter/tasks/install.yml
+++ b/roles/pgbouncer_exporter/tasks/install.yml
@@ -47,7 +47,7 @@
       notify: Restart service
 
   always:
-    - name: Remove temporary directoy
+    - name: Remove temporary directory
       ansible.builtin.file:
         path: "{{ pgbouncer_exporter_tempdir.path }}"
         state: absent
