--- a/roles/pgbackrest_exporter/defaults/main.yml
+++ b/roles/pgbackrest_exporter/defaults/main.yml
@@ -1,14 +1,80 @@
 ---
+
+# Version of the exporter.
+#
+# - Type: str
+# - Required: No
+# - Default: 0.22.0
 pgbackrest_exporter_version: 0.22.0
+
+# Operating system of where the exporter will be installed.
+#
+# - Type: str
+# - Required: No
+# - Default: linux
 pgbackrest_exporter_os: linux
+
+# Architecture of the system where the exporter will be installed.
+#
+# - Type: str
+# - Required: No
+# - Default: x86_64
 pgbackrest_exporter_arch: x86_64
-# yamllint disable-line rule:line-length
-pgbackrest_exporter_download_url: "https://github.com/woblerr/pgbackrest_exporter/releases/download/v{{ pgbackrest_exporter_version }}/pgbackrest_exporter-{{ pgbackrest_exporter_version
-  }}-{{ pgbackrest_exporter_os }}-{{ pgbackrest_exporter_arch }}.tar.gz"
+
+# URL used to download the exporter archive.
+#
+# - Type: str
+# - Required: No
+# - Default: https://github.com/woblerr/pgbackrest_exporter/releases/download/v{{ pgbackrest_exporter_version }}/pgbackrest_exporter-{{ pgbackrest_exporter_version }}-{{ pgbackrest_exporter_os }}-{{ pgbackrest_exporter_arch }}.tar.gz
+pgbackrest_exporter_download_url: "https://github.com/woblerr/pgbackrest_exporter/releases/download/\
+  v{{ pgbackrest_exporter_version }}/pgbackrest_exporter-{{ pgbackrest_exporter_version }}-\
+  {{ pgbackrest_exporter_os }}-{{ pgbackrest_exporter_arch }}.tar.gz"
+
+# Checksum of the downloaded archive to avoid supply-chain attack.
+#
+# - Type: str
+# - Required: No
+# - Default: 1562febbb006e96236e30ad0098757724614b2f29f87c1d210fed9083c4c31b5
 pgbackrest_exporter_checksum: 1562febbb006e96236e30ad0098757724614b2f29f87c1d210fed9083c4c31b5
+
+# Path to the exporter binary.
+#
+# - Type: path
+# - Required: No
+# - Default: /usr/local/bin/pgbackrest_exporter
 pgbackrest_exporter_bin: /usr/local/bin/pgbackrest_exporter
+
+# User to create to run the exporter.
+#
+# - Type: str
+# - Required: No
+# - Default: pgbackrest-exp
 pgbackrest_exporter_user: pgbackrest-exp
+
+# Group to create for the user to run the exporter.
+#
+# - Type: str
+# - Required: No
+# - Default: {{ pgbackrest_exporter_user }}
 pgbackrest_exporter_group: "{{ pgbackrest_exporter_user }}"
+
+# Path to the configuration file of pgBackRest.
+#
+# - Type: path
+# - Required: No
+# - Default: /etc/pgbackrest/pgbackrest.conf
 pgbackrest_exporter_config_file: /etc/pgbackrest/pgbackrest.conf
+
+# Port to listen for the exporter.
+#
+# - Type: int
+# - Required: No
+# - Default: 9854
 pgbackrest_exporter_port: 9854
+
+# Route to scrap metrics on the exporter.
+#
+# - Type: str
+# - Required: No
+# - Default: /metrics
 pgbackrest_exporter_telemetry_path: /metrics
