feat(pgbackrest): Simplify schedules
- Deprecate `pgbackrest_schedules variable` (will be removed in a future release)
- Add `pgbackrest_schedule_full` to define when to run full backups
- Add `pgbackrest_schedule_diff` to define when to run differential backups
- Add `pgbackrest_schedule_incr` to define when to run incremental backups

Fixes #16.

Signed-off-by: Julien Riou <julien@riou.xyz>

--- a/roles/pgbackrest/molecule/deprecated-schedules/inventory/hosts.yml
+++ b/roles/pgbackrest/molecule/deprecated-schedules/inventory/hosts.yml
@@ -21,6 +21,14 @@ molecule:
         main:
           - pg-path: "/var/lib/postgresql/{{ postgresql_version }}/main"
             pg-host-port: 5432
-      pgbackrest_schedules_randomized_delay_sec: 1800
-      pgbackrest_schedule_full: "Mon *-*-* 4:30:00"
-      pgbackrest_schedule_diff: "Tue..Sun *-*-* 4:30:00"
+      pgbackrest_schedules:
+        full:
+          OnCalendar: "Mon *-*-* 4:30:00"
+          RandomizedDelaySec: 1800
+          FixedRandomDelay: false
+          Persistent: false
+        diff:
+          OnCalendar: "Tue..Sun *-*-* 4:30:00"
+          RandomizedDelaySec: 1800
+          FixedRandomDelay: false
+          Persistent: false
