--- a/roles/pgbackrest/meta/argument_specs.yml
+++ b/roles/pgbackrest/meta/argument_specs.yml
@@ -30,10 +30,32 @@ argument_specs:
         type: dict
       pgbackrest_schedules:
         description:
+          - DEPRECATED.
+          - Use C(pgbackrest_schedule_full), C(pgbackrest_schedule_diff) and C(pgbackrest_schedule_incr) instead.
           - Dictionary of backup schedules.
           - The key is the backup type (C(full) or C(diff)).
           - The value is a dict of systemd timer settings (see L(systemd.timer,https://www.freedesktop.org/software/systemd/man/latest/systemd.timer.html)).
         type: dict
+      pgbackrest_schedule_full:
+        description:
+          - When to start full backups.
+          - See L(OnCalendar,https://www.freedesktop.org/software/systemd/man/latest/systemd.timer.html#OnCalendar=).
+          - See L(Calendar Events,https://www.freedesktop.org/software/systemd/man/latest/systemd.time.html#Calendar%20Events).
+      pgbackrest_schedule_diff:
+        description:
+          - When to start differential backups.
+          - See L(OnCalendar,https://www.freedesktop.org/software/systemd/man/latest/systemd.timer.html#OnCalendar=).
+          - See L(Calendar Events,https://www.freedesktop.org/software/systemd/man/latest/systemd.time.html#Calendar%20Events).
+      pgbackrest_schedule_incr:
+        description:
+          - When to start incremental backups.
+          - See L(OnCalendar,https://www.freedesktop.org/software/systemd/man/latest/systemd.timer.html#OnCalendar=).
+          - See L(Calendar Events,https://www.freedesktop.org/software/systemd/man/latest/systemd.time.html#Calendar%20Events).
+      pgbackrest_schedules_randomized_delay_sec:
+        description:
+          - Random number of seconds to wait before starting backup services.
+        type: int
+
       pgbackrest_service_after:
         description:
           - List of systemd units to wait before starting pgBackRest.
