feat(pgdg_repository): Add support for Debian 13
Relates to #13.

Signed-off-by: Julien Riou <julien@riou.xyz>

--- a/roles/pgdg_repository/molecule/default/inventory/hosts.yml
+++ b/roles/pgdg_repository/molecule/default/inventory/hosts.yml
@@ -4,3 +4,6 @@ molecule:
     deb12:
       ansible_connection: containers.podman.podman
       container_image: docker.io/geerlingguy/docker-debian12-ansible:latest
+    deb13:
+      ansible_connection: containers.podman.podman
+      container_image: docker.io/geerlingguy/docker-debian13-ansible:latest
